--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: "la_colmena_development"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/
     ports:
       - "5432:5432"
     healthcheck:
