--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+
   username: postgres
   password: postgres
   host: db
@@ -18,18 +19,26 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: la_colmena_production
-    username: la_colmena
-    password: <%= ENV["LA_COLMENA_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: la_colmena_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: la_colmena_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: la_colmena_production_cable
-    migrations_paths: db/cable_migrate
+    # database: la_colmena_production
+    # username: la_colmena
+    # password: <%= ENV["LA_COLMENA_DATABASE_PASSWORD"] %>
+
+    database: <%= ENV["PGDATABASE"] %>
+    host: <%= ENV["PGHOST"] %>
+    username: <%= ENV["PGUSER"] %>
+    password: <%= ENV["PGPASSWORD"] %>
+    port: <%= ENV["PGPORT"] || 5432 %>
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+
+ # cache:
+ #   <<: *primary_production
+ #   database: la_colmena_production_cache
+ #   migrations_paths: db/cache_migrate
+ # queue:
+ #   <<: *primary_production
+ #   database: la_colmena_production_queue
+ #   migrations_paths: db/queue_migrate
+ # cable:
+ #   <<: *primary_production
+ #   database: la_colmena_production_cable
+ #   migrations_paths: db/cable_migrate
