--- a/config/database.yml
+++ b/config/database.yml
@@ -19,4 +19,4 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    url: <%= ENV["DATABASE_URL"] %>
+    database_url: <%= ENV["DATABASE_URL"] %>
