--- a/config/database.yml
+++ b/config/database.yml
@@ -20,3 +20,8 @@ production:
   primary: &primary_production
     <<: *default
     database_url: <%= ENV["DATABASE_URL"] %>
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+
+  cable:
+    adapter: postgresql
+    database_url: <%= ENV["DATABASE_URL"] %>
