--- a/config/database.yml
+++ b/config/database.yml
@@ -22,9 +22,8 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database_url: <%= ENV["DATABASE_URL"] %>
-    pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+    url: <%= ENV["DATABASE_URL"] %>
 
   cable:
-    adapter: postgresql
-    database_url: <%= ENV["DATABASE_URL"] %>
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
