--- a/config/database.yml
+++ b/config/database.yml
@@ -27,3 +27,7 @@ production:
   cable:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
+
+  cache:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
