--- a/config/database.yml
+++ b/config/database.yml
@@ -25,9 +25,16 @@ production:
     url: <%= ENV["DATABASE_URL"] %>
 
   cable:
-    <<: *default
+    <<: *primary_production
     url: <%= ENV["DATABASE_URL"] %>
+    migrations_paths: db/cable_migrate
 
   cache:
-    <<: *default
+    <<: *primary_production
     url: <%= ENV["DATABASE_URL"] %>
+    migrations_paths: db/cache_migrate
+
+  queue:
+    <<: *primary_production
+    url: <%= ENV["DATABASE_URL"] %>
+    migrations_paths: db/queue_migrate
