--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,5 +1,11 @@
-FROM ruby:3.4.7
-RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
+FROM ruby:3.4-slim
+RUN apt-get update -qq && \
+    apt-get install -y build-essential nodejs npm postgresql-client curl gnupg2 libyaml-dev && \
+    curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor > /usr/share/keyrings/yarn-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/yarn-archive-keyring.gpg] https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
+    apt-get update -qq && \
+    apt-get install -y yarn
+
 WORKDIR /la_colmena
 COPY Gemfile /la_colmena/Gemfile
 COPY Gemfile.lock /la_colmena/Gemfile.lock
@@ -13,3 +19,5 @@ EXPOSE 3000
 
 # Configure the main process to run when running the image
 CMD ["rails", "server", "-b", "0.0.0.0"]
+
+
