--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,6 +1,13 @@
 FROM ruby:3.4.7
 RUN apt-get update -qq && \
-    apt-get install -y nodejs postgresql-client
+    apt-get install -y build-essential nodejs npm postgresql-client curl gnupg2 libyaml-dev
+
+# Install Yarn (official way)
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor > /usr/share/keyrings/yarn-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/yarn-archive-keyring.gpg] https://dl.yarnpkg.com/debian/ stable main" \
+    | tee /etc/apt/sources.list.d/yarn.list && \
+    apt-get update -qq && \
+    apt-get install -y yarn
 
 WORKDIR /la_colmena
 COPY Gemfile /la_colmena/Gemfile
